--- a/1_Extraccion_de_datos.ipynb
+++ b/1_Extraccion_de_datos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuL3gKdjRGhDQBTQmMGI85",
+      "authorship_tag": "ABX9TyPortvnJoLW4Ple5yEclfsR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "CmAgICH1L92j"
       },
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "D2JAmF_6RYs2"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -90,6 +90,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro 1"
+      ],
+      "metadata": {
+        "id": "SfCPl6jFXl6j"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Filtro por objeto\n",
@@ -101,6 +110,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro 2"
+      ],
+      "metadata": {
+        "id": "a-GJ7J_oXndZ"
+      }
     },
     {
       "cell_type": "code",
@@ -129,6 +147,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro 3"
+      ],
+      "metadata": {
+        "id": "7P_Knkk3Xq1P"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Filtro por columnas no consecutivas\n",
@@ -153,6 +180,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro mixto"
+      ],
+      "metadata": {
+        "id": "TMbvl7L4Xt-j"
+      }
     },
     {
       "cell_type": "code",
@@ -181,6 +217,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro filas vs columnas"
+      ],
+      "metadata": {
+        "id": "PqLWW6NOXyBL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Filtro de filas vs columnas\n",
@@ -190,10 +235,217 @@
         "df= pd.read_csv(io.BytesIO(uploaded['file.csv']),index_col=2)"
       ],
       "metadata": {
-        "id": "gnuph6RNZfs8"
+        "id": "gnuph6RNZfs8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        },
+        "outputId": "fc042857-1f1d-4000-cb8a-b7abb0b5ff54"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "     <input type=\"file\" id=\"files-e7b0325d-85e5-4b55-890b-1e733ba631d6\" name=\"files[]\" multiple disabled\n",
+              "        style=\"border:none\" />\n",
+              "     <output id=\"result-e7b0325d-85e5-4b55-890b-1e733ba631d6\">\n",
+              "      Upload widget is only available when the cell has been executed in the\n",
+              "      current browser session. Please rerun this cell to enable.\n",
+              "      </output>\n",
+              "      <script>// Copyright 2017 Google LLC\n",
+              "//\n",
+              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+              "// you may not use this file except in compliance with the License.\n",
+              "// You may obtain a copy of the License at\n",
+              "//\n",
+              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
+              "//\n",
+              "// Unless required by applicable law or agreed to in writing, software\n",
+              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+              "// See the License for the specific language governing permissions and\n",
+              "// limitations under the License.\n",
+              "\n",
+              "/**\n",
+              " * @fileoverview Helpers for google.colab Python module.\n",
+              " */\n",
+              "(function(scope) {\n",
+              "function span(text, styleAttributes = {}) {\n",
+              "  const element = document.createElement('span');\n",
+              "  element.textContent = text;\n",
+              "  for (const key of Object.keys(styleAttributes)) {\n",
+              "    element.style[key] = styleAttributes[key];\n",
+              "  }\n",
+              "  return element;\n",
+              "}\n",
+              "\n",
+              "// Max number of bytes which will be uploaded at a time.\n",
+              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
+              "\n",
+              "function _uploadFiles(inputId, outputId) {\n",
+              "  const steps = uploadFilesStep(inputId, outputId);\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  // Cache steps on the outputElement to make it available for the next call\n",
+              "  // to uploadFilesContinue from Python.\n",
+              "  outputElement.steps = steps;\n",
+              "\n",
+              "  return _uploadFilesContinue(outputId);\n",
+              "}\n",
+              "\n",
+              "// This is roughly an async generator (not supported in the browser yet),\n",
+              "// where there are multiple asynchronous steps and the Python side is going\n",
+              "// to poll for completion of each step.\n",
+              "// This uses a Promise to block the python side on completion of each step,\n",
+              "// then passes the result of the previous step as the input to the next step.\n",
+              "function _uploadFilesContinue(outputId) {\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  const steps = outputElement.steps;\n",
+              "\n",
+              "  const next = steps.next(outputElement.lastPromiseValue);\n",
+              "  return Promise.resolve(next.value.promise).then((value) => {\n",
+              "    // Cache the last promise value to make it available to the next\n",
+              "    // step of the generator.\n",
+              "    outputElement.lastPromiseValue = value;\n",
+              "    return next.value.response;\n",
+              "  });\n",
+              "}\n",
+              "\n",
+              "/**\n",
+              " * Generator function which is called between each async step of the upload\n",
+              " * process.\n",
+              " * @param {string} inputId Element ID of the input file picker element.\n",
+              " * @param {string} outputId Element ID of the output display.\n",
+              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
+              " */\n",
+              "function* uploadFilesStep(inputId, outputId) {\n",
+              "  const inputElement = document.getElementById(inputId);\n",
+              "  inputElement.disabled = false;\n",
+              "\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  outputElement.innerHTML = '';\n",
+              "\n",
+              "  const pickedPromise = new Promise((resolve) => {\n",
+              "    inputElement.addEventListener('change', (e) => {\n",
+              "      resolve(e.target.files);\n",
+              "    });\n",
+              "  });\n",
+              "\n",
+              "  const cancel = document.createElement('button');\n",
+              "  inputElement.parentElement.appendChild(cancel);\n",
+              "  cancel.textContent = 'Cancel upload';\n",
+              "  const cancelPromise = new Promise((resolve) => {\n",
+              "    cancel.onclick = () => {\n",
+              "      resolve(null);\n",
+              "    };\n",
+              "  });\n",
+              "\n",
+              "  // Wait for the user to pick the files.\n",
+              "  const files = yield {\n",
+              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
+              "    response: {\n",
+              "      action: 'starting',\n",
+              "    }\n",
+              "  };\n",
+              "\n",
+              "  cancel.remove();\n",
+              "\n",
+              "  // Disable the input element since further picks are not allowed.\n",
+              "  inputElement.disabled = true;\n",
+              "\n",
+              "  if (!files) {\n",
+              "    return {\n",
+              "      response: {\n",
+              "        action: 'complete',\n",
+              "      }\n",
+              "    };\n",
+              "  }\n",
+              "\n",
+              "  for (const file of files) {\n",
+              "    const li = document.createElement('li');\n",
+              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
+              "    li.append(span(\n",
+              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
+              "        `last modified: ${\n",
+              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
+              "                                    'n/a'} - `));\n",
+              "    const percent = span('0% done');\n",
+              "    li.appendChild(percent);\n",
+              "\n",
+              "    outputElement.appendChild(li);\n",
+              "\n",
+              "    const fileDataPromise = new Promise((resolve) => {\n",
+              "      const reader = new FileReader();\n",
+              "      reader.onload = (e) => {\n",
+              "        resolve(e.target.result);\n",
+              "      };\n",
+              "      reader.readAsArrayBuffer(file);\n",
+              "    });\n",
+              "    // Wait for the data to be ready.\n",
+              "    let fileData = yield {\n",
+              "      promise: fileDataPromise,\n",
+              "      response: {\n",
+              "        action: 'continue',\n",
+              "      }\n",
+              "    };\n",
+              "\n",
+              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
+              "    let position = 0;\n",
+              "    do {\n",
+              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
+              "      const chunk = new Uint8Array(fileData, position, length);\n",
+              "      position += length;\n",
+              "\n",
+              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
+              "      yield {\n",
+              "        response: {\n",
+              "          action: 'append',\n",
+              "          file: file.name,\n",
+              "          data: base64,\n",
+              "        },\n",
+              "      };\n",
+              "\n",
+              "      let percentDone = fileData.byteLength === 0 ?\n",
+              "          100 :\n",
+              "          Math.round((position / fileData.byteLength) * 100);\n",
+              "      percent.textContent = `${percentDone}% done`;\n",
+              "\n",
+              "    } while (position < fileData.byteLength);\n",
+              "  }\n",
+              "\n",
+              "  // All done.\n",
+              "  yield {\n",
+              "    response: {\n",
+              "      action: 'complete',\n",
+              "    }\n",
+              "  };\n",
+              "}\n",
+              "\n",
+              "scope.google = scope.google || {};\n",
+              "scope.google.colab = scope.google.colab || {};\n",
+              "scope.google.colab._files = {\n",
+              "  _uploadFiles,\n",
+              "  _uploadFilesContinue,\n",
+              "};\n",
+              "})(self);\n",
+              "</script> "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving file.csv to file (1).csv\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -204,6 +456,28 @@
       ],
       "metadata": {
         "id": "xH5sysTKaRx7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro de # número de filas"
+      ],
+      "metadata": {
+        "id": "vFG_W6KVYh1-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Filtro por cabecera\n",
+        "filtro5=df.head()\n",
+        "filtro5"
+      ],
+      "metadata": {
+        "id": "yH_NyFU7YbDz"
       },
       "execution_count": null,
       "outputs": []
@@ -240,6 +514,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro AND"
+      ],
+      "metadata": {
+        "id": "DzOeJeSiYq31"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Filtro AND\n",
@@ -248,6 +531,75 @@
       ],
       "metadata": {
         "id": "Sr5W3XvWh7uV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro OR"
+      ],
+      "metadata": {
+        "id": "YRH6wWsOaNJm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Filtro OR\n",
+        "filtro8=df[(df[\"Periodo\"] > 2006) | (df[\"Sexo\"] == \"Mujeres\")]\n",
+        "filtro8"
+      ],
+      "metadata": {
+        "id": "fdZneG2UW3eW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filtro NOT"
+      ],
+      "metadata": {
+        "id": "MRCcZheWajBw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Filtro NOT\n",
+        "filtro9=df[~(df[\"Periodo\"] >= 2006) & ~(df[\"Sexo\"] == \"Mujeres\")]\n",
+        "filtro9"
+      ],
+      "metadata": {
+        "id": "Yi8dF6SIakdt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Convertir archivo filtrado a csv\n",
+        "filtro9.to_csv(\"Entregable1.csv\")"
+      ],
+      "metadata": {
+        "id": "rtNaHIZecfdg"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Decargar archivo filtrado en csv\n",
+        "from google.colab import files\n",
+        "files.download(\"Entregable1.csv\")"
+      ],
+      "metadata": {
+        "id": "cZdLLeNWcomz"
       },
       "execution_count": null,
       "outputs": []
